tests/neg/02-glob.ts
/*@ glob :: { number | v > 10 } */
var glob = 20;

/*@ zog :: () => {void | true} */
function zog() {
  glob = 3;
}
